fixed some responsive alignment

--- a/styles/game.css
+++ b/styles/game.css
@@ -195,8 +195,10 @@ li a{
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 .first-column{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    /* grid-template-columns: repeat(5, 1fr); */
+
     gap: 20px;
     width: 80%;
     margin: 20px auto;
@@ -311,8 +313,12 @@ li a{
     .nav-bar,.nav-cont,.nav,.full-header-content{
         flex-direction: column;
     }
+    .game-icon{
+        margin-top: 20px;
+    }
     .nav{
         padding: 0;
+        margin-top: 0;
     }
     .nav li{
         margin: 10px auto;
@@ -344,6 +350,7 @@ li a{
         align-items: center;
         text-align: center;
         font-size: 1rem;
+        margin-bottom: 30px;
     }
     .img-position{
         position: relative;
@@ -353,12 +360,29 @@ li a{
     .poster-txt-section {
     margin: 0;
 }
-.first-column,.second-column {
+.game-list{
+    height: 320px;
+}
+.first-column {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    width: 80%;
-    margin: 20px auto;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px 10px;
+    width: 90%;
+    margin: 20px auto 0;
+    line-height: 0;
+    padding-top: 26px;
+    /* height: inherit; */
+}
+.first-column .image-styls{
+    box-shadow: 0px 1px 20px 1px rgba(0, 0, 0, 0.05);
+}
+.first-column img{
+    width: 30%;
+}
+.first-column p{
+    margin: 0;
+    line-height: 1em;
+    font-size: x-small;
 }
 .background-color{
     height: 0%;
@@ -366,20 +390,25 @@ li a{
 
 .footer-opt {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: 60%;
+    grid-template-columns: repeat(3, 1fr);
+    width: 80%;
     margin: 0 auto;
     color: #FFF;
     text-align: center;
 }
 .game-icon-footer{
     width: 40%;
+    justify-content: center;
+}
+.game-icon-footer .title-icon{
+    width: 28%;
 }
 .footer-img {
     display: grid;
     grid-template-columns: repeat(3, 2fr);
     gap: 30px;
-    width: 50%;
+    width: 86%;
     margin: 20px auto;
+    justify-items: center;
 }
 }
